fix(core): source edit button should not collapse itself when VE is selected

--- a/resources/skins.citizen.styles/Pagetools.less
+++ b/resources/skins.citizen.styles/Pagetools.less
@@ -227,7 +227,7 @@
 
 #p-views {
 	// VE styles shouldn't be core but it is just a few lines :/
-	#ca-ve-edit {
+	#ca-ve-edit:not( .selected ) {
 		order: 98; // Before source edit
 
 		> a {
